# dicom_client

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  dicomreader.cpp  dicomreader.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  run-docker.sh
.github/workflows/: docker-image.yml
tests/: dicomreadertest.cpp
